Trying to fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body, html {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    
 }
 
 * {
@@ -324,20 +325,20 @@ body {
     background-image: url(../Images/birdlife.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 700px;
-    width: 1200px;
-    background-position: 70px 0px;
-    margin-top: 100px;
+    height: 500px;
+    max-width: 950px;
+    background-position: 70px -150px;
+    margin-top: 220px;
     margin-bottom: 100px;
-
+    margin-left: 100px;
 }
 
 
 .birdlifecontent {
     width: 300px;
     position: relative;
-    left: 110px;
-    top: 100px;
+    left: 20px;
+    top: -150px;
     line-height: 30px;
 
 }
@@ -365,10 +366,11 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
-    width: 1200px;
-    background-position: 70px 0px;
+    width: 950px;
+    background-position: 170px 0px;
     margin-top: 100px;
     margin-bottom: 100px;
+    margin-left: 100px;
 }
 
 .wayfarer h4 {
@@ -384,12 +386,14 @@ body {
 }
 
 .wayfarercontent {
-    width: 300px;
     position: relative;
     float: right;
     right: 110px;
-    top: 135px;
     color: white;
+
+    width: 300px;
+    right: 90px;
+    top: 100px;
     line-height: 30px;
 
 }
@@ -407,12 +411,16 @@ body {
     background-image: url(../Images/plantpal.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 200px 100px;
     height: 700px;
-    width: 1200px;
+    width: 950px;
     background-position: 70px 0px;
     margin-top: 70px;
     margin-bottom: 100px;
+    margin-left: 100px;
 }
+
+
 
 .plantpalcontent {
     width: 300px;
